# git2-repro

./: .gitignore  Cargo.toml  README.md
src/: main.rs
