[package]
name = "git2-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tracing = { version = "0.1.40", features = ["log"] }

git2 = { version = "0.18.3", features = ["vendored-libgit2", "vendored-openssl"] }
libgit2-sys = { version = "*", features = ["vendored"] }

# doesn't seem to work
libz-sys = { version = "*", features = ["static"] }
