[package]
name = "git2-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

git2 = { version = "0.18.3", features = ["vendored-libgit2", "vendored-openssl"] }
libgit2-sys = { version = "*", features = ["vendored"] }

# doesn't seem to work
libz-sys = { version = "*", features = ["static"] }

#zstd = { version = "0.13.1", features = [] }
